--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "this-is-a-test-of-no-confidence",
+  "name": "this-is-a-test-mess",
   "version": "1.0.2",
   "description": "tet",
   "main": "index.js",
