--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches: ["main"]
 
-  workflow_dispatch:
-
 permissions:
   contents: read
   pages: write
@@ -29,8 +27,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '.'
-      - run : 'npm run build'
+          path: "."
+      - run: "npm run build"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
