--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Node.js Package
 
 on:
-  releases:
+  release:
     types: [published]
-      
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      = run: npm run build
+      - run: npm run build
       #- run: npm test
 
   publish-npm:
