added npm dependency ci installs on workflocs

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,13 +22,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: npm ci
+      - run: "npm run ci:build"
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: "."
-      - run: "npm run build"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
