--- a/.github/workflows/pull-lint.yml
+++ b/.github/workflows/pull-lint.yml
@@ -9,4 +9,5 @@ jobs:
      steps: 
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+      - run: npm ci
       - run: npm run ci:check
