--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - run: npm ci
-      - run: "npm run ci:build"
+      - run: "npm run build:docs"
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
